clusters/my-cluster/infra/monitoring/prometheus-stack/base/grafana-ingress.yaml
# clusters/my-cluster/infra/grafana-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  # 그라파나가 설치된 monitoring 네임스페이스에 생성합니다.
  namespace: monitoring
  annotations:
    # 이 규칙은 nginx 인그레스 컨트롤러가 처리하도록 지정합니다.
    kubernetes.io/ingress.class: "nginx"
    # SSL 인증서를 자동으로 발급받기 위해 이전에 만든 'zerossl-prod'를 사용합니다.
    cert-manager.io/cluster-issuer: "zerossl-prod"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  # TLS(SSL) 설정을 추가하여 HTTPS를 활성화합니다.
  tls:
    - hosts:
        # 그라파나에 접속할 주소입니다.
        - grafana.jjangyushop.kro.kr
      # 인증서가 저장될 Secret의 이름입니다. (cert-manager가 자동 생성)
      secretName: grafana-tls-secret
  rules:
  - host: grafana.jjangyushop.kro.kr
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            # kube-prometheus-stack이 생성한 그라파나 서비스의 이름입니다.
            name: kube-prometheus-stack-grafana
            port:
              # 그라파나 서비스가 사용하는 포트입니다.
              number: 80
